--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
             </section>
         </main>
 
-        <footer class="footer benefits">
+        <footer class="footer">
             <div class="container">
                 <a class="footer-logo-link link" href="./index.html">Web<span class="foote-logo-span">Studio</span></a>
                 <p class="footer-logo-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
