--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>WEBSTUDIO</title>
     </head>
     
-    <body>
+    <body >
         <header class="header">
             <div class="header_container container">
                 <nav class="header-navigation">
@@ -36,7 +36,7 @@
                         </li>
                     </ul>
                 </address>
-            <div></div></div>
+            </div>
         </header>
 
         <main class="main">
@@ -47,7 +47,7 @@
                 </div>
             </section>
 
-            <section class="section-two benefits">
+            <section class="section-two">
                 <div class="container">
                     <h2 class="visually-hidden">Info</h2>
                     <ul class="section-two-list list">
@@ -71,7 +71,7 @@
                 </div>
             </section>
 
-            <section class="section-three reviews">
+            <section class="section-three">
                 <div class="container">
                     <h2 class="section-three-title">What are we doing</h2>
                     <ul class="section-three-list list">
@@ -88,7 +88,7 @@
                 </div>
             </section>
 
-            <section class="section-four reviews">
+            <section class="section-four">
                 <div class="container">
                     <h2 class="section-four-title">Our Team</h2>
                     <ul class="section-four-list list">
@@ -126,7 +126,7 @@
 
         </main>
 
-        <footer class="footer benefits">
+        <footer class="footer">
             <div class="container">
                 <a class="footer-logo-link link" href="./index.html">Web<span class="foote-logo-span">Studio</span></a>
                 <p class="footer-logo-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
